# Performance-Analysis-in-NBA-Draft

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
amla_at1/: __init__.py  config.py  dataset.py  features.py  plots.py
amla_at1/modeling/: predict.py  train.py
models/exp2_best_20250829-044334/: best_model.joblib  metadata.json  raw_feature_columns.txt
models/exp4_catboost_20250829_044226/: feature_importance.csv  metadata.json  model.cbm  schema.json
notebooks/: 36120-25SP-AT1-12-25238736-experiment0.ipynb  36120-25SP-AT1-12-25238736-experiment1.ipynb  36120-25SP-AT1-12-25238736-experiment2.ipynb  36120-25SP-AT1-group12-25238736-experiment-0.ipynb  36120-25SP-AT1-group12-25238736-experiment-1.ipynb  36120-25SP-AT1-group12-25238736-experiment-2.ipynb  36120-25SP-AT1-group12-25238736-experiment-3.ipynb  submission0.csv  submission_exp0_25238736_amla_at1.csv  submission_exp1_25238736_amla_at1.csv  submission_exp2_25238736_amla_at1.csv  submission_exp3_25238736_amla_at1.csv
src/amla_at1/: __init__.py
src/amla_at1/data/: __init__.py  sets.py
src/amla_at1/features/: __init__.py  dates.py
src/amla_at1/models/: __init__.py  null.py  performance.py
tests/: test_data.py
tests/data/: test_sets.py
tests/features/: test_dates.py
tests/models/: test_null.py  test_performance.py
