[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "amla_at1"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Nayna" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.11.4"


[tool.ruff]
line-length = 99
src = ["amla_at1"]
include = ["pyproject.toml", "amla_at1/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["amla_at1"]
force-sort-within-sections = true

