[tool.poetry]
name = "amla-at1"
version = "2025.0.1.8"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "amla_at1", from = "src" }]


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "==2.2.2"
jupyterlab = "==4.2.3"
scikit-learn = "==1.5.1"
joblib = "==1.4.2"
xgboost = "==2.1.0"
hyperopt = "==0.2.7"
lightgbm = "==4.4.0"
lime = "==0.2.0.1"
wandb = "==0.17.4"
numpy = "1.26.4"
scipy = "1.11.4"
catboost = "1.2.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
jupyterlab = "4.2.3"